# Programacion-paralela-2026

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  benchmark.py  benchmarkCon03.py  benchmarkMejor.py  benchmarkOMP.py  informe.md  kmeans  kmeans.c  kmeans_omp  kmeans_omp.c
include/: config.h  csv_reader.h  kmeans.h  kmeans_omp.h  point.h
scripts/: benchmark.py
src/: csv_reader.c  kmeans.c  kmeans_omp.c  main_omp.c  main_seq.c
